refactor: rename project and remove boilerplate projects

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,4 @@
-add_subdirectory(apps/pong)
-add_subdirectory(apps/pong-e2e)
-add_subdirectory(apps/pong-ecs)
+add_subdirectory(apps/day3)
 
 add_subdirectory(packages/core)
 add_subdirectory(packages/core-imgui)
