--- a/src/apps/day3/CMakeLists.txt
+++ b/src/apps/day3/CMakeLists.txt
@@ -13,9 +13,14 @@ set(SOURCES
         src/events/KeyPressedEvent.h
         src/systems/CollisionSystem.h
         src/systems/KeyboardControlSystem.h
-        src/systems/MovementSystem.h
         src/systems/RenderRigidBodiesSystem.h
-        src/strategies/ECSStrategy.h src/services/PuzzleInputParser.h src/components/TextComponent.h src/systems/RenderTextSystem.h src/systems/RenderGridSystem.h src/systems/RenderColliderSystem.h src/systems/PuzzleSolverSystem.h)
+        src/strategies/ECSStrategy.h
+        src/services/PuzzleInputParser.h
+        src/components/TextComponent.h
+        src/systems/RenderTextSystem.h
+        src/systems/RenderGridSystem.h
+        src/systems/RenderColliderSystem.h
+        src/systems/PuzzleSolverSystem.h)
 
 add_executable(${APP_NAME} ${SOURCES})
 
